<resources>
    <string name="app_name">Schedule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Subject">Materia</string>
    <string name="teacher">Profesor</string>
    <string name="classroom">Aula</string>
    <string name="choose_day">Seleccionar día : </string>
    <string name="of">De </string>
    <string name="time">00:00</string>
    <string name="to">A </string>
    <string name="subject_code">Código Matería : </string>
    <string name="code">Código</string>
    <string name="save">Guardar</string>

</resources>
